--- a/python-cleaning.ipynb
+++ b/python-cleaning.ipynb
@@ -5,7 +5,7 @@
    "id": "940c71bc-bc98-405e-b734-861c170d7768",
    "metadata": {},
    "source": [
-    "# First Notebook"
+    "# Python Cleaning"
    ]
   },
   {
